MaxPermSize is not used any more in Java 8, so remove it everywhere
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1808617 13f79535-47bb-0310-9956-ffa450edef68